@@ -6,6 +6,7 @@
 
  * New Features:
    * Vorbis comment vendors include the Mutagen version.
+   * mutagen.id3: ETCO, SYTC frame support.
    * mutagen.oggspeex: Read/tag Ogg Speex files.
    * mutagen.trueaudio: Read/tag True Audio files.
    * mutagen.wavpack: Read/tag WavPack files.
